--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Chize's Porfolio of Security Projects
+title: Chize's Portfolio of Security Projects
 description: Welcome to my Security Portfolio, a collection of projects that highlight my expertise in security. Each project reflects my commitment to protecting digital assets, solving complex security challenges, and implementing proactive defense strategies. Through these projects, I demonstrate my ability to adapt to evolving cyber threats, leverage cutting-edge tools and frameworks, and apply best practices to ensure the security and resilience of systems and networks.
 show_downloads: false
 google_analytics:
