--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Welcome to my Security Portfolio, a collection of projects that hig
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+url: "https://miroy625.github.io/"
+image: "projects/media/securityportfoliobanner.png"
